[package]
name = "yewv"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/yewv/yewv"
homepage = "https://github.com/yewv/yewv"
documentation = "https://github.com/yewv/yewv/blob/main/README.md"
license = "MIT"
keywords = ["yew", "state", "store"]
categories = ["gui", "wasm", "web-programming"]
description = "A lightning fast state management module for Yew"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"

[dev-dependencies]
gloo = { version = "0.6", features = ["futures"] }
gloo-utils = "0.1.0"
wasm-bindgen-test = "0.3"